Closed Bug 352150 Opened 18 years ago Closed 18 years ago

getText, characterCount missing text content

Categories

(Core :: Disability Access APIs, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: parente, Assigned: aaronlev)

References

Details

(Keywords: access)

Attachments

(4 files, 1 obsolete file)

Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.9a1) Gecko/20060911 Minefield/3.0a1

1) Put missing_text.py and pyLinAcc.zip in the same directory.
2) Go to http://www.mozilla.org/access/unix/new-atk.html.
3) Run "python missing_text.py"
4) Compare the character count and text printed to the content of the third column, fifth row. Only the first line is returned, not the entire content as requested.

Note that there is no embed character or child accessibles, so the missing text isn't just in another location.
Attached file at-spi code
Attached file test case
Blocks: newatk
Keywords: access, sec508
Attachment #238459 - Attachment is obsolete: true
Depends on: 346833
Blocks: 346833
No longer depends on: 346833
Comment on attachment 238628 [details] [diff] [review]
1) Walk all of frame tree, 2) Add comment on how to use DOM tree for :before/:After 2) clean up unused variables in incorrect boolean usage (not actually necessary for fix)

seems good, though I can't test it.

everytime I run the testcase, I got the error as follows.
Traceback (most recent call last):
  File "missing_text.py", line 17, in ?
    acc = acc.getChildAtIndex(i)
AttributeError: 'NoneType' object has no attribute 'getChildAtIndex'
Attachment #238628 - Flags: review?(Evan.Yan) → review+
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: