Bug 352150. getText, characterCount missing text content. r=evan.yan